@@ -4,6 +4,7 @@
   * Add tree tests
   * Add basic set theory (uses all of the tree theory logic)
   * Add methods that need to be overwritten to set
+  * Tree ensures parent exists in the nestable scope
 
 2009-06-13 - Sean Huber (shuber@huberry.com)
   * Initial commit
